# NoiseDecter

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/noisedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/inc/: androidlog.h  sound_pressure_eval.h
app/src/main/java/com/example/noisedemo/: FileUtil.java  MainActivity.java  MyMediaRecorder.java  ScreenUtil.java  SoundDiscView.java  World.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/noisedemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
